--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1> my first ever wensite</h1>
-    <h3>Look mama! i can push to github</h3>
+    <h1>my first ever website</h1>
+    <h3>look mama! i can push ti github</h3>
 </body>
 </html>
