--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>my first ever website</h1>
-    <h3>look mama! i can push ti github</h3>
+    <p>felling happy now</p>
+    <p>i am a ghost</p>
 </body>
 </html>
